[impl-12] Squashed: Enable wss and add React client to read events.
commit a22f4518574b1ecf0bc8d89ef7176e628d2f68c9
Author: Michał Cop <michalcop@bntech.dev>
Date:   Thu May 4 19:39:52 2023 +0200

    WS over HTTPS from React

commit ea123f8eafc70cd935ec7247403afa9ed6b9b3ed
Author: Michał Cop <michalcop@bntech.dev>
Date:   Thu May 4 14:56:53 2023 +0200

    ws works over http

commit 7a5803740b7d0bbe6bb0643f80cae284d96e0014
Author: Michał Cop <michalcop@bntech.dev>
Date:   Thu May 4 04:11:46 2023 +0200

    default ws

commit 8e85691b076a220cd2dc5c84ebf66e7f1c49f91c
Author: Michał Cop <michalcop@bntech.dev>
Date:   Thu May 4 03:36:13 2023 +0200

    Ws client connection works